# learn-actix

./: .env  Cargo.toml  README.md
sql/: delete_user.sql  schema.sql  update_user.sql
src/: db.rs  main.rs  models.rs
