[package]
name = "learn-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1"}
confik = "0.15"
deadpool-postgres = { version = "0.14", features = ["serde"] }
derive_more = { version = "2", features = ["display", "error", "from"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7"